--- a/crossplatform-app/knee-rom/android/app/src/main/assets/capacitor.config.json
+++ b/crossplatform-app/knee-rom/android/app/src/main/assets/capacitor.config.json
@@ -2,8 +2,5 @@
 	"appId": "io.ionic.starter",
 	"appName": "KneeROM",
 	"webDir": "build",
-	"bundledWebRuntime": false,
-	"server": {
-		"url": "http://localhost:8100"
-	}
+	"bundledWebRuntime": false
 }
